--- a/FinishedSignUp.ejs
+++ b/FinishedSignUp.ejs
@@ -27,13 +27,14 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top border bg-light" id="mainNav">
     <div class="container">
-      <div class="container" style="width: 250px; margin: 0;">
+        <div class="container" style="width: 250px; margin: 0;">
           <div class="row">
             <div class="col" ><div class="echelonLogo-2"></div></div>
             <div class="w-100"></div>
             <div class="col" ><div class="logoy-2"></div></div>
           </div>
         </div>
+        
       <a class="signinText" href="login.html">Sign In</a>
     </div>
 </nav>
@@ -48,40 +49,24 @@
               <div class="col-lg-6">
                 <div class="p-5">
                   <div class="text-center">
-                      <div class="cir"><i class="fas fa-check fa-2x bigCheck"></i></div>
-                      <br>
-                      <div class="stepsText">Step <b>2</b> of <b>3</b></div>
-                    <h1 class="h4 mb-4 signinHeader" style="white-space: nowrap;">Create your account.</h1>
-                      <p>Just a few more steps and you're done!</p>
+                    <h1 class="h4 mb-4 signinHeader" style="white-space: nowrap;">Confirm Your Details.</h1>
                   </div>
-                  <form class="user" method="get" action="userinfo">
+                  <form class="user" method="">
                       <input id="plan" name="plan" hidden>
                       <div class="text-center">
-                        <div class="form-group">
-                          <input type="email" name="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address...">
+                        <div class="contextBox">
+                            <p class="titleOne">Reflect Monthly</p>
+                            <p class="titleTwo">39.99</p>
                         </div>
-                          <br>
-                        <div class="form-group">
-                          <input type="password" class="form-control form-control-user" id="password" name="psw" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters">
+                        <div class="contextBox">
+                            <p class="titleOne-2">Firstname Lastname</p>
+                            <p class="titleTwo-2">VISA ending in 4747</p>
                         </div>
-                        <div class="form-group">
-                          <input type="password" class="form-control form-control-user" placeholder="Verify Password" id="txtConfirmPassword">
-                        </div>
-                        <div id="divCheckPasswordMatch" class="h5 invalid"></div>
-                          
-                        <div id="message">
-                          <h5>Password must contain the following:</h5>
-                          <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
-                          <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
-                          <p id="number" class="invalid">A <b>number</b></p>
-                          <p id="length" class="invalid">Minimum <b>8 characters</b></p>
-                        </div>
-                          
                     </div>
                       <br>
-                    <button type="submit" id="sumbitBtn" class="btn btn-danger btn-user btn-block signupText">
-                      Continue
-                    </button>
+                    <a href="login.html" class="btn btn-danger btn-user btn-block signupText">
+                      Start Your Class Now
+                    </a>
                   </form>
                 </div>
               </div>
@@ -189,9 +174,8 @@
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for all pages-->
-  <script src="js/sb-admin-2.min.js"></script>
   <script src="js/agency.min.js"></script>
-    
+
 </body>
 
 </html>
