--- a/SetUpYourPayment.ejs
+++ b/SetUpYourPayment.ejs
@@ -18,6 +18,13 @@
   <!-- Custom styles for this template-->
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
     
+<script src="https://js.stripe.com/v3/"></script>
+    
+    <!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
 </head>
 
@@ -46,54 +53,53 @@
             <!-- Nested Row within Card Body -->
             <div class="row justify-content-center">
               <div class="col-lg-6">
-                <div class="p-5">
+                <div class="p-5 text-left" style="padding: 2rem !important">
                   <div class="text-center">
-                      <div class="cir"><i class="fas fa-check fa-2x bigCheck"></i></div>
+                      <div class="cir"><i class="fas fa-lock fa-2x bigCheck"></i></div>
                       <br>
-                      <div class="stepsText">Step <b>2</b> of <b>3</b></div>
-                    <h1 class="h4 mb-4 signinHeader" style="white-space: nowrap;">Create your account.</h1>
-                      <p>Just a few more steps and you're done!</p>
+                      <div class="stepsText">Step <b>3</b> of <b>3</b></div>
+                    <h1 class="h4 mb-4 signinHeader" style="white-space: nowrap;">Set Up Your Payment.</h1>
                   </div>
-                  <form class="user" method="get" action="userinfo">
-                      <input id="plan" name="plan" hidden>
-                      <div class="text-center">
-                        <div class="form-group">
-                          <input type="email" name="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address...">
-                        </div>
-                          <br>
-                        <div class="form-group">
-                          <input type="password" class="form-control form-control-user" id="password" name="psw" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters">
-                        </div>
-                        <div class="form-group">
-                          <input type="password" class="form-control form-control-user" placeholder="Verify Password" id="txtConfirmPassword">
-                        </div>
-                        <div id="divCheckPasswordMatch" class="h5 invalid"></div>
-                          
-                        <div id="message">
-                          <h5>Password must contain the following:</h5>
-                          <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
-                          <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
-                          <p id="number" class="invalid">A <b>number</b></p>
-                          <p id="length" class="invalid">Minimum <b>8 characters</b></p>
-                        </div>
-                          
+                    <div class="row justify-content-center ">
+                            <div class="col-1">
+                                <i class="fas fa-check spacey"></i>
+                            </div>
+                            <div class="col-10">
+                                <div class="contextBody">
+                                    <p>You won't be charged until after your 14 day trial ends.</p>
+                                </div>
+                            </div>
+                            <div class="w-100"></div>
+                            <div class="col-1"><i class="fas fa-check spacey"></i></div>
+                            <div class="col-10">   
+                                <div class="contextBody">
+                                    <p>No commitments, cancel anytime.</p>
+                                </div>
+                            </div>
                     </div>
-                      <br>
-                    <button type="submit" id="sumbitBtn" class="btn btn-danger btn-user btn-block signupText">
-                      Continue
-                    </button>
-                  </form>
                 </div>
+                  
+                <form class="user" method="get" action="card">
+                    <input id="plan" name="plan" hidden>
+                    <input name="uinfo" value="<%= uinfo %>" type="hidden">
+                    <input name="uinfo2" value="<%= uinfo2 %>" type="hidden">
+                    <div class="row justify-content-center">
+                        <button type="submit" id="sumbitBtn" class="btn btn-danger paymentBtn" href="card"> Credit or Debit Card <i class="fas fa-2x fa-credit-card"></i></button>
+                    </div>
+                  </form>
+                  
+                  <div class="row justify-content-center">
+                      <a class="btn btn-danger paymentBtn-2" href="activationcode"> Activation Code <i class="fas fa-2x fa-key"></i></a>
+                  </div>
               </div>
             </div>
           </div>
         </div>
-
       </div>
-
     </div>
-
+    
   </div>
+    
     
 <!-- Footer -->
 <footer class="page-footer font-small footerCustom">
@@ -180,7 +186,7 @@
 </footer>
 <!-- Footer -->
 
-
+    
   <!-- Bootstrap core JavaScript-->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -189,7 +195,6 @@
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for all pages-->
-  <script src="js/sb-admin-2.min.js"></script>
   <script src="js/agency.min.js"></script>
     
 </body>
