--- a/login.ejs
+++ b/login.ejs
@@ -12,77 +12,58 @@
   <title>Reflect Sign up</title>
 
   <!-- Custom fonts for this template-->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
   <!-- Custom styles for this template-->
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
-    
 
 </head>
 
 <body class="bg-gradient-primary">
 
-<div class="container my-5">
+  <div class="container-sm my-5">
 
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top border bg-light" id="mainNav">
-    <div class="container">
-      <div class="container" style="width: 250px; margin: 0;">
-          <div class="row">
-            <div class="col" ><div class="echelonLogo-2"></div></div>
-            <div class="w-100"></div>
-            <div class="col" ><div class="logoy-2"></div></div>
-          </div>
-        </div>
-      <a class="signinText" href="login.html">Sign In</a>
-    </div>
-</nav>
-      
+    <!-- Outer Row -->
     <div class="row justify-content-center">
 
       <div class="col-lg-8 col-lg-12 col-md-9">
-        <div class="card o-hidden border-0 my-5">
+
+        <div class="card border-0 shadow-lg my-5">
           <div class="card-body p-0">
             <!-- Nested Row within Card Body -->
             <div class="row justify-content-center">
-              <div class="col-lg-6">
+              <div class="col-lg-12">
                 <div class="p-5">
                   <div class="text-center">
-                      <div class="cir"><i class="fas fa-check fa-2x bigCheck"></i></div>
-                      <br>
-                      <div class="stepsText">Step <b>2</b> of <b>3</b></div>
-                    <h1 class="h4 mb-4 signinHeader" style="white-space: nowrap;">Create your account.</h1>
-                      <p>Just a few more steps and you're done!</p>
+                      <div class="echelonLogo" style="margin: auto;"></div>
+                      <div class="logoy" style="margin: auto;"></div>
+                    <h1 class="h4 text-gray-900 mb-4" style="white-space: nowrap;">Sign In</h1><div class="logo"></div>
                   </div>
-                  <form class="user" method="get" action="userinfo">
-                      <input id="plan" name="plan" hidden>
-                      <div class="text-center">
-                        <div class="form-group">
-                          <input type="email" name="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address...">
-                        </div>
-                          <br>
-                        <div class="form-group">
-                          <input type="password" class="form-control form-control-user" id="password" name="psw" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters">
-                        </div>
-                        <div class="form-group">
-                          <input type="password" class="form-control form-control-user" placeholder="Verify Password" id="txtConfirmPassword">
-                        </div>
-                        <div id="divCheckPasswordMatch" class="h5 invalid"></div>
-                          
-                        <div id="message">
-                          <h5>Password must contain the following:</h5>
-                          <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
-                          <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
-                          <p id="number" class="invalid">A <b>number</b></p>
-                          <p id="length" class="invalid">Minimum <b>8 characters</b></p>
-                        </div>
-                          
+                  <form class="user" method="post">
+                    <div class="form-group">
+                      <input type="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address...">
                     </div>
-                      <br>
-                    <button type="submit" id="sumbitBtn" class="btn btn-danger btn-user btn-block signupText">
-                      Continue
-                    </button>
+                    <div class="form-group">
+                      <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Password">
+                    </div>
+                    <div class="form-group">
+                      <div class="custom-control custom-checkbox small">
+                        <input type="checkbox" class="custom-control-input" id="customCheck">
+                        <label class="custom-control-label" for="customCheck">Remember Me</label>
+                      </div>
+                    </div>
+                    <a href="Profile.html" class="btn btn-danger btn-user btn-block">
+                      Login
+                    </a>
                   </form>
+                  <hr>
+                  <div class="text-center">
+                    <a class="small" href="forgot-password.html">Forgot Password?</a>
+                  </div>
+                  <div class="text-center">
+                    <a class="small" href="ChooseYourPlan.html">Create an Account!</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -190,8 +171,7 @@
 
   <!-- Custom scripts for all pages-->
   <script src="js/sb-admin-2.min.js"></script>
-  <script src="js/agency.min.js"></script>
-    
+
 </body>
 
 </html>
