--- a/views/Account-WebOffers.ejs
+++ b/views/Account-WebOffers.ejs
@@ -50,7 +50,6 @@
                   <div class="text-center">
                       <div class="cir"><i class="fas fa-check fa-2x bigCheck"></i></div>
                       <br>
-                      <div class="stepsText">Step <b>2</b> of <b>3</b></div>
                     <h1 class="h4 mb-4 signinHeader" style="white-space: nowrap;">Create your account.</h1>
                       <p>Just a few more steps and you're done!</p>
                   </div>
@@ -62,12 +61,11 @@
                         </div>
                           <br>
                         <div class="form-group">
-                          <input type="password" class="form-control form-control-user" id="password" name="psw" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters">
+                          <input type="password" class="form-control form-control-user" id="psw" name="psw" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters">
                         </div>
                         <div class="form-group">
-                          <input type="password" class="form-control form-control-user" placeholder="Verify Password" id="txtConfirmPassword">
+                          <input type="password" class="form-control form-control-user" placeholder="Verify Password">
                         </div>
-                        <div id="divCheckPasswordMatch" class="h5 invalid"></div>
                           
                         <div id="message">
                           <h5>Password must contain the following:</h5>
