added email and password verification to login:members:modals, added metric to weight, fixed close button on modals, changed confirmation messages to appear after submit...

--- a/views/EditPlan.ejs
+++ b/views/EditPlan.ejs
@@ -57,7 +57,7 @@
                   <form class="user" method="post">
                       <div class="container text-center">
                       <h1 class="h2 signinHeader">Edit Subscription</h1>
-                          <div class="addedFamilyMember"><i class="far fa-check-circle"></i> Succefully Changed</div>
+                          <div id="succefullyChanged" class="addedFamilyMember"><i class="far fa-check-circle"></i> Succefully Changed</div>
                           <br>
                           <div class="row justify-content-center">
                               <strong id="ifMonthlyCurrentPlan" class="mobileShow">Current Plan:</strong>
@@ -94,7 +94,7 @@
                           </div>
                           <br>
                         <div class="row justify-content-center">
-                            <a class="btn btn-danger editOptionSub">Submit</a>
+                            <a id="changePlan" class="btn btn-danger editOptionSub">Submit</a>
                         </div>
                                 
                       </div>
