--- a/views/FamilyPlanning.ejs
+++ b/views/FamilyPlanning.ejs
@@ -142,9 +142,9 @@
         <div class="modal-footer">
             <div class="row w-100 h-100" style="padding-right: 20px;">
                 <div class="col-5" >
-                    <a href="" class="btn btn-danger btn-user btn-block signupText">
+                    <button data-dismiss="modal" class="btn btn-danger btn-user btn-block signupText">
                       Close
-                    </a>
+                    </button>
                 </div>
                 <div class="col-2"></div>
                 <div class="col-5">
