--- a/views/UserInfo.ejs
+++ b/views/UserInfo.ejs
@@ -74,12 +74,18 @@
                           
                         <div class="row text-left">
                             <div class="col">
-                              <label class="contextBody">Weight (pounds)</label>
+                              <label class="contextBody">Weight</label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col">
                                 <input class="form-control infoGender-2" type="number" name="weight" id="weight" min="0" data-bind="value:replyNumber" />
+                            </div>
+                            <div class="col-md-4">
+                                <select class="form-control birthday-sm" name="height" id="weightSelect">
+                                      <option id="centy">Kilograms</option>
+                                      <option selected>Pounds</option>
+                                </select>
                             </div>
                         </div>
                           <br>
