--- a/views/Account-WebOffers.ejs
+++ b/views/Account-WebOffers.ejs
@@ -57,15 +57,16 @@
                       <input id="plan" name="plan" hidden>
                       <div class="text-center">
                         <div class="form-group">
-                          <input type="email" name="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address...">
+                          <input type="email" name="email" class="form-control form-control-user" id="email" aria-describedby="emailHelp" placeholder="Enter Email Address..." required>
                         </div>
                           <br>
                         <div class="form-group">
-                          <input type="password" class="form-control form-control-user" id="psw" name="psw" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters">
+                          <input type="password" class="form-control form-control-user" id="password" name="psw" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
                         </div>
                         <div class="form-group">
-                          <input type="password" class="form-control form-control-user" placeholder="Verify Password">
+                          <input type="password" class="form-control form-control-user" placeholder="Verify Password" id="txtConfirmPassword">
                         </div>
+                        <div id="divCheckPasswordMatch" class="h5 invalid"></div>
                           
                         <div id="message">
                           <h5>Password must contain the following:</h5>
