--- a/views/Account.ejs
+++ b/views/Account.ejs
@@ -56,28 +56,27 @@
                   </div>
                   <form class="user" method="get" action="userinfo">
                       <input id="plan" name="plan" hidden>
-                      <div class="text-center">
-                        <div class="form-group">
-                          <input type="email" name="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address...">
+                        <div class="text-center">
+                            <div class="form-group">
+                              <input type="email" name="email" class="form-control form-control-user" id="email" aria-describedby="emailHelp" placeholder="Enter Email Address..." required>
+                            </div>
+                              <br>
+                            <div class="form-group">
+                              <input type="password" class="form-control form-control-user" id="password" name="psw" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
+                            </div>
+                            <div class="form-group">
+                              <input type="password" class="form-control form-control-user" placeholder="Verify Password" id="txtConfirmPassword">
+                            </div>
+                            <div id="divCheckPasswordMatch" class="h5 invalid"></div>
+
+                            <div id="message">
+                              <h5>Password must contain the following:</h5>
+                              <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
+                              <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
+                              <p id="number" class="invalid">A <b>number</b></p>
+                              <p id="length" class="invalid">Minimum <b>8 characters</b></p>
+                            </div>
                         </div>
-                          <br>
-                        <div class="form-group">
-                          <input type="password" class="form-control form-control-user" id="password" name="psw" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters">
-                        </div>
-                        <div class="form-group">
-                          <input type="password" class="form-control form-control-user" placeholder="Verify Password" id="txtConfirmPassword">
-                        </div>
-                        <div id="divCheckPasswordMatch" class="h5 invalid"></div>
-                          
-                        <div id="message">
-                          <h5>Password must contain the following:</h5>
-                          <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
-                          <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
-                          <p id="number" class="invalid">A <b>number</b></p>
-                          <p id="length" class="invalid">Minimum <b>8 characters</b></p>
-                        </div>
-                          
-                    </div>
                       <br>
                     <button type="submit" id="sumbitBtn" class="btn btn-danger btn-user btn-block signupText">
                       Continue
@@ -189,7 +188,6 @@
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for all pages-->
-  <script src="js/sb-admin-2.min.js"></script>
   <script src="js/agency.min.js"></script>
     
 </body>
