--- a/views/AddFamilyPlanning.ejs
+++ b/views/AddFamilyPlanning.ejs
@@ -53,9 +53,9 @@
                 <div class="p-5">
                   <div class="text-center">
                     <h1 class="h4 mb-4 signinHeader">Add a Family Member.</h1>
-                      <p>Add up to five family members that can all enjoy reflect today</p>
-                      <div class="addedFamilyMember"><i class="far fa-check-circle"></i> Succefully added family member</div>
-                      <div class="addedFamilyMember"><i class="far fa-check-circle"></i> An email has been sent</div>
+                      <p>Add up to five family members that can all enjoy reflect today. Some of this information is used to accurately calculate the number of calories burned and your heart rate.</p>
+                      <div id="succefullyAddedFamilyMember" class="addedFamilyMember"><i class="far fa-check-circle"></i> Succefully added family member</div>
+                      <div id="emailHasBeenSent" class="addedFamilyMember"><i class="far fa-check-circle"></i> An email has been sent</div>
                   </div>
                     <br>
                   <form class="user" method="post">
@@ -83,7 +83,7 @@
                                     <br>
                                     <div class="row mb-2">
                                         <div class="col-11 position-relative">
-                                           <button class="editSubInput-2 h-100 addedFamilyMember-lg emailInUse mb-4" id="emailInUse">Email is already in use, if you want to add this parent account as a family member click here</button>
+                                           <button type="button" class="editSubInput-2 h-100 addedFamilyMember-lg emailInUse mb-4" id="emailInUse">Email is already in use, if you want to add this parent account as a family member click here</button>
                                         </div>
                                     </div>
                                     <div class="row text-left">
@@ -136,22 +136,54 @@
                                           </div>
                                         </div>
                                     </div>
+                                    
                                     <div class="row text-left">
                                         <div class="col">
-                                            <label>Weight (pounds)</label>
+                                          <label class="">Weight</label>
                                         </div>
                                         <div class="col-6">
-                                            <label>Height (feet)</label>
+                                            <label>Unit</label>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="col-6">
-                                            <input class="form-control editSubInput" type="number" name="weight" id="weight" min="0" data-bind="value:replyNumber" placeholder="210.."/>
+                                            <input class="form-control editSubInput" type="number" name="weight" id="weight" min="0" data-bind="value:replyNumber" />
                                         </div>
                                         <div class="col-6">
-                                            <input class="form-control editSubInput" id="nickNameFamilyMember" placeholder="5'10..">
+                                            <select class="form-control editSubInput" name="height" id="weightSelect">
+                                                  <option id="centy">Kilograms</option>
+                                                  <option selected>Pounds</option>
+                                            </select>
                                         </div>
                                     </div>
+                                    <br>
+                                    <div class="row text-left">
+                                        <div class="col">
+                                            <label>Height</label>
+                                        </div>
+                                        <div class="col-4">
+                                            <label>(inches)</label>
+                                        </div>
+                                        <div class="col-4">
+                                            <label>Unit</label>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-4 col-md-4">
+                                            <input class="form-control h-50px birthday" type="number" step="0.01" name="height" id="height" min="0" data-bind="value:replyNumber" />
+                                        </div>
+                                        <div class="col-4 col-md-4">
+                                            <input class="form-control h-50px birthday" type="number" step="0.01" name="height" id="inches" min="0" data-bind="value:replyNumber" />
+
+                                        </div>
+                                        <div class="col-4 col-md-4">
+                                            <select class="form-control h-50px birthday" name="height" id="heightSelect">
+                                                  <option id="centy">Centimeters</option>
+                                                  <option selected>feet & inches</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    
                                     <br>
                                     <div class="row text-left">
                                         <div class="col">
@@ -160,7 +192,7 @@
                                     </div>
                                         <div class="row">
                                             <div class="col-4 col-md-4">
-                                                <select class="form-control birthday" id="birthM">
+                                                <select class="form-control h-50px birthday" id="birthM">
                                                   <option selected>January</option>
                                                     <option>February</option>
                                                     <option>March</option>
@@ -176,7 +208,7 @@
                                                 </select>
                                             </div>
                                             <div class="col-4 col-md-4">
-                                                <select class="form-control birthday"id="birthD">
+                                                <select class="form-control h-50px birthday"id="birthD">
                                                     <option selected>1</option>
                                                     <option>2</option>
                                                     <option>3</option>
@@ -211,17 +243,17 @@
                                                 </select>
                                             </div>
                                             <div class="col-4 col-md-4">
-                                                <select class="form-control birthday" id="birthY">
+                                                <select class="form-control h-50px birthday" id="birthY">
                                                 </select>
                                             </div>
                                         </div>
                                     <br><br>
                                 <div class="row justify-content-center">
                                 <div class="col-12 col-md-6">
-                                <a href="AddFamilyPlanning.html" class="btn btn-danger btn-user btn-block-sm fmBtn">
+                                <button type="button" id="addFamilyMember" class="btn btn-danger btn-user btn-block-sm fmBtn">
                                     <div class="mobileHide">Add Family Member</div>
                                     <div class="mobileShow">Add</div>
-                                </a>
+                                </button>
                                 </div>
                                 <div class="col-12 col-md-6">
                                 <a href="FamilyPlanning.html" class="btn btn-dark btn-user btn-block-sm fmBtn">
