--- a/views/FinishedSignUp-WebOffers.ejs
+++ b/views/FinishedSignUp-WebOffers.ejs
@@ -56,7 +56,7 @@
                   <form class="user" method="">
                       <input id="plan" name="plan" hidden>
                         <div class="text-center">
-                          <p class="subText">Thanks for signing up, if you have any questions visit our Help Center or check your email for a tutorial video.</p>
+                          <p class="subText">Thanks for signing up, if you have any questions visit our Help Center or check your email for more info. </p>
                             <div class="row justify-content-center text-left">
                             <div class="col-1">
                                 <i class="fas fa-check spacey"></i>
