--- a/views/Profile.ejs
+++ b/views/Profile.ejs
@@ -135,9 +135,9 @@
         <div class="modal-footer">
             <div class="row w-100 h-100" style="padding-right: 20px;">
                 <div class="col-5" >
-                    <a href="" class="btn btn-danger btn-user btn-block signupText">
+                    <button  data-dismiss="modal" class="btn btn-danger btn-user btn-block signupText">
                       Close
-                    </a>
+                    </button>
                 </div>
                 <div class="col-2"></div>
                 <div class="col-5">
@@ -168,9 +168,9 @@
         <div class="modal-footer">
             <div class="btn-group btn-group-justified" role="group" aria-label="group button">
                 <div class="btn-group btn-delete hidden" role="group">
-                    <a href="step2.html" class="btn btn-danger btn-user btn-block signupText">
+                    <button  data-dismiss="modal" class="btn btn-danger btn-user btn-block signupText">
                       Save
-                    </a>
+                    </button>
                 </div>
             </div>
         </div>
@@ -195,9 +195,9 @@
         <div class="modal-footer">
             <div class="row w-100 h-100" style="padding-right: 20px;">
                 <div class="col-5" >
-                    <a href="" class="btn btn-danger btn-user btn-block signupText">
+                    <button  data-dismiss="modal" class="btn btn-danger btn-user btn-block signupText">
                       Close
-                    </a>
+                    </button>
                 </div>
                 <div class="col-2"></div>
                 <div class="col-5">
@@ -220,25 +220,37 @@
             <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
         </div>
         <div class="modal-body text-left">
-            <label class="modal-label">Current Password</label>
-            <div class="form-group fgModal">
-              <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="">
+            <div class="text-center">
+                <div class="form-group text-left">
+                <label class="modal-label">Old Password: </label>
+                  <input type="password" name="password" class="form-control form-control-user editSubInput w-100" id="OldPassword" aria-describedby="emailHelp" placeholder="Enter Old Password..." required>
+                </div>
+                  <br>
+                <div class="form-group text-left">
+                <label class="modal-label">New Password: </label>
+                  <input type="password" class="form-control form-control-user editSubInput w-100" id="password" name="psw" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
+                </div>
+                <div class="form-group">
+                  <input type="password" class="form-control form-control-user editSubInput w-100" placeholder="Verify Password" id="txtConfirmPassword">
+                </div>
+                <div id="divCheckPasswordMatch" class="h5 invalid"></div>
+
+                <div id="message">
+                  <h5>Password must contain the following:</h5>
+                  <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
+                  <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
+                  <p id="number" class="invalid">A <b>number</b></p>
+                  <p id="length" class="invalid">Minimum <b>8 characters</b></p>
+                </div>
             </div>
-            <label class="modal-label">New Password</label>
-            <div class="form-group fgModal">
-              <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="">
-            </div>
-            <label class="modal-label">Confirm Password</label>
-            <div class="form-group fgModal">
-              <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="">
-            </div>
+                      
         </div>
         <div class="modal-footer">
             <div class="row w-100 h-100" style="padding-right: 20px;">
                 <div class="col-5" >
-                    <a href="" class="btn btn-danger btn-user btn-block signupText">
+                    <button  data-dismiss="modal" class="btn btn-danger btn-user btn-block signupText">
                       Close
-                    </a>
+                    </button>
                 </div>
                 <div class="col-2"></div>
                 <div class="col-5">
@@ -262,16 +274,16 @@
         </div>
         <div class="modal-body">
             <label class="modal-label">Email: </label>
-            <div class="form-group fgModal">
-              <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="">
+            <div class="form-group">
+                <input type="email" name="email" class="form-control form-control-user editSubInput w-100" id="email" aria-describedby="emailHelp" placeholder="Enter Email Address..." required>
             </div>
         </div>
         <div class="modal-footer">
             <div class="row w-100 h-100" style="padding-right: 20px;">
                 <div class="col-5" >
-                    <a href="" class="btn btn-danger btn-user btn-block signupText">
+                    <button  data-dismiss="modal" class="btn btn-danger btn-user btn-block signupText">
                       Close
-                    </a>
+                    </button>
                 </div>
                 <div class="col-2"></div>
                 <div class="col-5">
@@ -284,7 +296,6 @@
     </div>
   </div>
 </div>
-
 
 <!-- line modal for Billing details -->
 <div class="modal fade" id="squarespaceModal7" role="dialog" aria-labelledby="modalLabel">
@@ -320,9 +331,9 @@
         <div class="modal-footer">
             <div class="row w-100 h-100" style="padding-right: 20px;">
                 <div class="col-5" >
-                    <a href="" class="btn btn-danger btn-user btn-block signupText">
+                    <button  data-dismiss="modal" class="btn btn-danger btn-user btn-block signupText">
                       Close
-                    </a>
+                    </button>
                 </div>
                 <div class="col-2"></div>
                 <div class="col-5">
@@ -363,9 +374,9 @@
         <div class="modal-footer">
             <div class="row w-100 h-100" style="padding-right: 20px;">
                 <div class="col-5" >
-                    <a href="" class="btn btn-danger btn-user btn-block signupText">
+                    <button  data-dismiss="modal" class="btn btn-danger btn-user btn-block signupText">
                       Close
-                    </a>
+                    </button>
                 </div>
                 <div class="col-2"></div>
                 <div class="col-5">
