--- a/views/ProfileFamilyMember.ejs
+++ b/views/ProfileFamilyMember.ejs
@@ -136,10 +136,16 @@
             </div>
         </div>
         <div class="modal-footer">
-            <div class="btn-group btn-group-justified" role="group" aria-label="group button">
-                <div class="btn-group btn-delete hidden" role="group">
-                    <a href="" class="btn btn-danger btn-user btn-block signupText" data-dismiss="modal">
-                      Save
+            <div class="row w-100 h-100" style="padding-right: 20px;">
+                <div class="col-5" >
+                    <button  data-dismiss="modal" class="btn btn-danger btn-user btn-block signupText">
+                      Close
+                    </button>
+                </div>
+                <div class="col-2"></div>
+                <div class="col-5">
+                    <a href="" class="btn btn-danger btn-user btn-block signupText">
+                       Save
                     </a>
                 </div>
             </div>
@@ -147,7 +153,7 @@
     </div>
   </div>
 </div>
-     
+  
 <!-- line modal for password -->
 <div class="modal fade" id="squarespaceModal4" role="dialog" aria-labelledby="modalLabel">
   <div class="modal-dialog">
@@ -157,24 +163,42 @@
             <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
         </div>
         <div class="modal-body text-left">
-            <label class="modal-label">Current Password</label>
-            <div class="form-group fgModal">
-              <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="">
+            <div class="text-center">
+                <div class="form-group text-left">
+                <label class="modal-label">Old Password: </label>
+                  <input type="password" name="password" class="form-control form-control-user editSubInput w-100" id="OldPassword" aria-describedby="emailHelp" placeholder="Enter Old Password..." required>
+                </div>
+                  <br>
+                <div class="form-group text-left">
+                <label class="modal-label">New Password: </label>
+                  <input type="password" class="form-control form-control-user editSubInput w-100" id="password" name="psw" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
+                </div>
+                <div class="form-group">
+                  <input type="password" class="form-control form-control-user editSubInput w-100" placeholder="Verify Password" id="txtConfirmPassword">
+                </div>
+                <div id="divCheckPasswordMatch" class="h5 invalid"></div>
+
+                <div id="message">
+                  <h5>Password must contain the following:</h5>
+                  <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
+                  <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
+                  <p id="number" class="invalid">A <b>number</b></p>
+                  <p id="length" class="invalid">Minimum <b>8 characters</b></p>
+                </div>
             </div>
-            <label class="modal-label">New Password</label>
-            <div class="form-group fgModal">
-              <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="">
-            </div>
-            <label class="modal-label">Confirm Password</label>
-            <div class="form-group fgModal">
-              <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="">
-            </div>
+                      
         </div>
         <div class="modal-footer">
-            <div class="btn-group btn-group-justified" role="group" aria-label="group button">
-                <div class="btn-group btn-delete hidden" role="group">
-                    <a href="" class="btn btn-danger btn-user btn-block signupText" data-dismiss="modal">
-                      Save
+            <div class="row w-100 h-100" style="padding-right: 20px;">
+                <div class="col-5" >
+                    <button  data-dismiss="modal" class="btn btn-danger btn-user btn-block signupText">
+                      Close
+                    </button>
+                </div>
+                <div class="col-2"></div>
+                <div class="col-5">
+                    <a href="" class="btn btn-danger btn-user btn-block signupText">
+                       Save
                     </a>
                 </div>
             </div>
@@ -193,15 +217,21 @@
         </div>
         <div class="modal-body">
             <label class="modal-label">Email: </label>
-            <div class="form-group fgModal">
-              <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="">
+            <div class="form-group">
+                <input type="email" name="email" class="form-control form-control-user editSubInput w-100" id="email" aria-describedby="emailHelp" placeholder="Enter Email Address..." required>
             </div>
         </div>
         <div class="modal-footer">
-            <div class="btn-group btn-group-justified" role="group" aria-label="group button">
-                <div class="btn-group btn-delete hidden" role="group">
-                    <a href="" class="btn btn-danger btn-user btn-block signupText" data-dismiss="modal">
-                      Save
+            <div class="row w-100 h-100" style="padding-right: 20px;">
+                <div class="col-5" >
+                    <button  data-dismiss="modal" class="btn btn-danger btn-user btn-block signupText">
+                      Close
+                    </button>
+                </div>
+                <div class="col-2"></div>
+                <div class="col-5">
+                    <a href="" class="btn btn-danger btn-user btn-block signupText">
+                       Save
                     </a>
                 </div>
             </div>
