changed to password requirements message, confirmation messages, email already in use...

--- a/views/Account.ejs
+++ b/views/Account.ejs
@@ -51,7 +51,7 @@
                       <div class="cir"><i class="fas fa-check fa-2x bigCheck"></i></div>
                       <br>
                       <div class="stepsText">Step <b>2</b> of <b>3</b></div>
-                    <h1 class="h4 mb-4 signinHeader" style="white-space: nowrap;">Create your account.</h1>
+                    <h1 class="h4 mb-4 signinHeader">Create your account.</h1>
                       <p>Just a few more steps and you're done!</p>
                   </div>
                   <form class="user" method="get" action="userinfo">
@@ -69,8 +69,8 @@
                             </div>
                             <div id="divCheckPasswordMatch" class="h5 invalid"></div>
 
-                            <div id="message">
-                              <h5>Password must contain the following:</h5>
+                            <div id="message" class="text-left">
+                              <h5 class="signinHeader-sm text-center mobileHide">Password must contain the following:</h5>
                               <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
                               <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
                               <p id="number" class="invalid">A <b>number</b></p>
