--- a/views/AddFamilyPlanning.ejs
+++ b/views/AddFamilyPlanning.ejs
@@ -83,7 +83,7 @@
                                     <br>
                                     <div class="row mb-2">
                                         <div class="col-11 position-relative">
-                                           <button type="button" class="editSubInput-2 h-100 addedFamilyMember-lg emailInUse mb-4" id="emailInUse">Email is already in use, if you want to add this parent account as a family member click here</button>
+                                           <div id="emailInUse" class="editSubInput-2 h-100 addedFamilyMember-lg  mb-4">Email is already in use, if you want to add this parent account as a family member <a class="strong fg font-italic">click here</a></div>
                                         </div>
                                     </div>
                                     <div class="row text-left">
