--- a/views/CreateYourAccount-WebOffers.ejs
+++ b/views/CreateYourAccount-WebOffers.ejs
@@ -57,7 +57,7 @@
                       <input id="plan" name="plan" hidden>
                       <div class="text-center">
                         <div class="contextBody">
-                         Use your email and create a password to start working with Reflect today.
+                         Use your email and create a password to start achieving your fitness goals with Reflect today.
                         </div>
                     </div>
                       <br>
