--- a/views/EditPlan.ejs
+++ b/views/EditPlan.ejs
@@ -60,12 +60,12 @@
                           <div id="succefullyChanged" class="addedFamilyMember"><i class="far fa-check-circle"></i> Succefully Changed</div>
                           <br>
                           <div class="row justify-content-center">
-                              <strong id="ifMonthlyCurrentPlan" class="mobileShow">Current Plan:</strong>
+                              <strong id="currentPlanM1" class="mobileShow">Current Plan:</strong>
                             <div id="monthly" class="editOptionSub-card">
                                 <div class="row align-items-center equal contextBody-sub">
                                     <div class="col-3 editSubBackCard mobileHide"></div>
                                     <div class="col col-3 bg-whitesmoke mobileHide">
-                                        <div class="row justify-content-center"><strong>Current Plan:</strong></div>
+                                        <div class="row justify-content-center"><strong id="currentPlanM2">Current Plan:</strong></div>
                                         <div class="row justify-content-center">Reflect Monthly</div>
                                     </div>
                                     <div class="col-6 mobileHide">Enjoy Live Streaming Workouts and On Demand Classes</div>
@@ -77,12 +77,12 @@
                           </div>
                           <br>
                           <div class="row justify-content-center">
-                              <strong id="ifYearlyCurrentPlan" class="mobileShow" hidden>Current Plan:</strong>
+                              <strong id="currentPlanY1" class="mobileShow">Current Plan:</strong>
                             <div id="yearly" class="editOptionSub-card">
                                 <div class="row align-items-center equal contextBody-sub">
                                     <div class="col-3 editSubBackCard mobileHide"></div>
                                     <div class="col-3 bg-whitesmoke mobileHide">
-                                        <div class="row justify-content-center CurrentPlan"><strong>Current Plan:</strong></div>
+                                        <div class="row justify-content-center"><strong id="currentPlanY2">Current Plan:</strong></div>
                                         <div class="row justify-content-center ">Reflect Yearly</div>
                                     </div>
                                     <div class="col-6 mobileHide">Enjoy Live Streaming Workouts and On Demand Classes</div>
