--- a/views/FamilyPlanning.ejs
+++ b/views/FamilyPlanning.ejs
@@ -54,7 +54,7 @@
                   <div class="text-center">
                     <h1 class="h4 mb-4 signinHeader">Manage Family Members</h1>
                       <p>Everyone in your home can enjoy Reflect.</p>
-                      <div class="addedFamilyMember-lg">Congrats you've reached the max number of family members! In order to add another family member you must first delete one.</div>
+                      <div class="addedFamilyMember-lg"><i class="far fa-check-circle"></i> Congrats you've reached the max number of family members! In order to add another family member you must first delete one.</div>
                   </div>
                     <br>
                   <form class="user" method="post">
